--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <meta property="og:title" content="Shielded Mint Forge - FHE Stablecoin Vault" />
     <meta property="og:description" content="Secure FHE-protected stablecoin vault platform with encrypted transactions and privacy-first DeFi solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:image" content="/favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@blocktorch_ai" />
-    <meta name="twitter:image" content="/favicon.ico" />
+    <meta name="twitter:image" content="/favicon.svg" />
     
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
